fix(#18): OpenAI 协议 tools 跨协议全链路修复 (请求/历史/响应/流式四断点 + 三顺带修)
OpenAI 调用方带 tools 打到 anthropic 协议渠道时全链路丢失 (协议归一
承诺对 tools 不成立), 证据链见 issue #18:
- A1 openaiToAnthropic 补 tools/tool_choice 转换 (function 型映射,
  required→any, {function:{name}}→{type:tool,name})
- A2 历史: assistant tool_calls → tool_use 块 (arguments 串解析为
  input 对象); 连续 role=tool 合并 tool_result 块并入紧随 user 轮
- A3 anthropicToOpenAIResponse 补 tool_use → message.tool_calls
  (仅工具调用时 content=null); refusal → content_filter 对齐流式
- A4 OpenAiSseConverter 补 tool_use 开块/input_json_delta →
  delta.tool_calls 增量 (块号↔tool 序号映射)
- B3 AnthropicSseConverter 补 delta.tool_calls → tool_use 块事件
- 顺带: stop→stop_sequences / max_completion_tokens 回退 /
  source.type=url 图片直传 / B 方向流式 usage 并入 message_delta
  (原恒 0, message_delta 延迟到 usage 帧后发)

测试 417→424 (+7); 已知有损面 (无对应物) 记录于 CHANGELOG 备查.

fixes #18

Co-Authored-By: Claude <noreply@anthropic.com>